refactor : 코드 리포매팅